Bug 307394 - F3 doesn't work
Summary: F3 doesn't work
Status: RESOLVED FIXED
Alias: None
Product: kwebkitpart
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 1.3.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-25 17:32 UTC by Antonio Rojas
Modified: 2012-09-26 22:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2012-09-25 17:32:04 UTC
The F3 and Shift+F3 shortcuts for "search next" and "search previous" don't work

Reproducible: Always

Steps to Reproduce:
1. Ctrl+f, search some string that appears more than once
2. Press F3

Actual Results:  
Nothing

Expected Results:  
Go to the next instance of the search string
Comment 1 Dawit Alemayehu 2012-09-26 22:17:21 UTC
Git commit a6ef9d566bbcb816469cb5e7f79d51cf44a02984 by Dawit Alemayehu.
Committed on 27/09/2012 at 00:14.
Pushed by adawit into branch '1.3'.

Fix search shortcuts.
FIXED-IN: 1.3.1

M  +6    -5    src/kwebkitpart.cpp

http://commits.kde.org/kwebkitpart/a6ef9d566bbcb816469cb5e7f79d51cf44a02984
Comment 2 Dawit Alemayehu 2012-09-26 22:17:43 UTC
Git commit 9c5dd9450a76a0cfe5f02a548e1a27e48de7c67b by Dawit Alemayehu.
Committed on 27/09/2012 at 00:14.
Pushed by adawit into branch 'master'.

Fix search shortcuts.
FIXED-IN: 1.3.1
(cherry picked from commit a6ef9d566bbcb816469cb5e7f79d51cf44a02984)

M  +6    -5    src/kwebkitpart.cpp

http://commits.kde.org/kwebkitpart/9c5dd9450a76a0cfe5f02a548e1a27e48de7c67b