Fix search shortcuts.

BUG: 307394
FIXED-IN: 1.3.1
(cherry picked from commit a6ef9d566bbcb816469cb5e7f79d51cf44a02984)